--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "secondAppReact",
+  "name": "expensify-app-react",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watch",
     "serve": "live-server public/",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
@@ -18,6 +18,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "css-loader": "^0.28.8",
+    "jest": "^22.2.1",
     "live-server": "^1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
