adding SetupTest.js enzyme enzyme-adapter-react-16 and jes.config.json

--- a/package.json
+++ b/package.json
@@ -4,22 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
-    "serve": "live-server public/",
+    "test": "jest --config=jest.config.json --watch",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
   "author": "Wally <wolaondo@gmail.com>",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.8",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "jest": "^22.2.1",
-    "live-server": "^1.2.0",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
     "normalize.css": "^7.0.0",
@@ -29,6 +31,7 @@
     "react-modal": "^3.1.10",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
@@ -36,9 +39,5 @@
     "validator": "^9.2.0",
     "webpack": "^3.10.0",
     "webpack-dev-server": "^2.10.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-react": "^6.24.1"
   }
 }
