adding styles to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 /node_modules/
 public/bundle.js
 public/bundle.js.map
-public/styless.css
-public/styless.css.map
+public/styles.css
+public/styles.css.map
