--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "expensify-app-react",
-  "version": "1.0.0",
-  "description": "",
+  "version": "1.0.0",  
   "main": "index.js",
-  "scripts": {
-    "test": "jest --config=jest.config.json --watch",
+  "scripts": {    
     "build:dev": "webpack",
     "build:prod": "webpack -p --env production",
     "prod": "NODE_ENV=production",
-    "heroku-postbuild": "npm run build:prod",
     "dev-server": "webpack-dev-server",
-    "start": "node server/server.js"
+    "test": "jest --config=jest.config.json --watch",
+    "start": "node server/server.js",
+    "heroku-postbuild": "npm run build:prod"
   },
   "author": "Wally <wolaondo@gmail.com>",
   "license": "ISC",
