--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "express": "^4.16.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "firebase": "^4.12.0",
     "jest": "^22.2.1",
     "moment": "^2.20.1",
     "node-sass": "^4.7.2",
