--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2",
+    "redux-mock-store": "^1.5.1",
+    "redux-thunk": "^2.2.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
     "uuid": "^3.1.0",
